# agentic-cv-parser

./: .env.example  README.md  database.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
agent/: calls_schema.py  prompts.py  state.py  tools.py  workflow.py
alembic/: env.py
alembic/versions/: 38c9ba527be2_update_candidate_table_url_embeddings_.py  738d3197f824_exp_skills_projects_education_certif_.py  a5e70066868c_.py  a9bd181b2a98_.py  b060f072342f_.py  c49f2267f02e_table_relations.py  cbadba36e1b1_initial_migration.py
api/: deps.py  router.py
api/v1/: router.py
api/v1/endpoints/: agent.py  candidate.py  health.py  research.py
core/: config.py
crud/: candidates.py  sections.py
models/: __init__.py  candidate_skills.py  candidates.py  certification.py  education.py  experience.py  projects.py  skills.py
schema/: agent.py  candidates.py  certificates.py  education.py  experience.py  projects.py  responses.py  skills.py
services/: documents.py
utils/: helpers.py  limiter.py  logger.py  redis.py  s3_client.py
utils/exceptions/: global_exceptions.py
utils/middlewares/: server_error.py
