[tool.poetry]
name = "cv-parser"
version = "0.1.0"
description = ""
authors = ["Andrew Sameh <g.andrewsameh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langgraph = "0.2.73"
langchain = "0.3.14"
langchain-core = "0.3.29"
langchain-pinecone = "0.2.0"
langchain-openai = "0.2.14"
langchain-community = "0.3.14"
langchain-text-splitters = "0.3.4"
pinecone-client = "5.0.1"
openai = "1.59.3"
pypdf = "5.1.0"
python-multipart = "0.0.20"
docx2txt = "0.8"
unstructured = "0.16.12"
pdfplumber = "^0.11.5"
python-dotenv = "^1.0.1"
pydantic = "2.10.6"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
pytest = "^8.3.4"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
structlog = "^25.1.0"
asgi-correlation-id = "^4.3.4"
boto3 = "^1.36.26"
fastapi-limiter = "^0.1.6"
redis = "5.2.1"
jwt = "^1.3.1"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.38"
sqlalchemy-utils = "^0.41.2"
pytest-asyncio = "^0.25.3"
greenlet = "^3.1.1"
email-validator = "^2.2.0"
tzdata = "^2025.1"
langchain-unstructured = "^0.1.6"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
